[package]
name = "siset"
version = "0.1.0"
authors = ["William D. Jones <thor0505@comcast.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linux-embedded-hal = "0.3.0"
argh = "0.1.3"
si5351 = "0.2.0"
eyre = "0.6.3"

[patch.crates-io]
si5351 = { git = "https://github.com/cr1901/si5351", branch = "display" }
